# Magnuson_Trading_OS

./: .env.example  .gitignore  pyproject.toml
.claude/: CLAUDE.md
docs/: ARCHITECTURE.md  DECISIONS.md  ROADMAP.md  SCHEMA.md  VISION.md
schema/postgres/: 001_v0.sql  003_concept_seed.sql  004_prefer_confidence.sql  005_add_cik.sql  006_backfill_cohort_source.sql  007_api_consumer.sql
scripts/: bootstrap_actions.py  validate_adjustment_engine.py
src/trading_os/api/: app.py  deps.py  keys.py  models.py
src/trading_os/api/routers/: bars.py  fundamentals.py  macro.py
src/trading_os/bars/: knowledge_time.py  lineage.py  models.py  silver_store.py  validation.py  writer.py
src/trading_os/config/: settings.py
src/trading_os/connectors/alpaca/: __init__.py  cli.py  client.py  config.py  models.py  parser.py  rebuild.py  writer.py
src/trading_os/connectors/calendars/: __init__.py  cli.py  client.py  config.py  models.py  writer.py
src/trading_os/connectors/edgar/: __init__.py  cli.py  client.py  config.py  mapper.py  models.py  parser.py  writer.py
src/trading_os/connectors/fred/: __init__.py  cli.py  client.py  config.py  models.py  parser.py  writer.py
src/trading_os/connectors/openfigi/: __init__.py  cli.py  client.py  config.py  models.py  parser.py  writer.py
src/trading_os/connectors/tiingo/: __init__.py  actions.py  bars.py  bars_cli.py  cli.py  client.py  config.py  loader.py  stats.py  symbols.py  writer.py
src/trading_os/corp/: __init__.py  action_write.py
src/trading_os/dq/: __init__.py  bars.py  cli.py  corp_actions.py
src/trading_os/engine/: __init__.py  adjust.py  cli.py  config.py  store.py
src/trading_os/universe/: __init__.py  build_manifest.py  cik.py  cli.py  config.py  coverage.py  models.py  writer.py
src/trading_os/universe/manifests/: .gitignore  etfs.csv  registry.csv  sp500.csv
tests/: conftest.py  test_adjust.py  test_alpaca_rebuild.py  test_api_bars.py  test_api_fundamentals.py  test_api_macro.py  test_bars_dq.py  test_bars_eod.py  test_bars_knowledge_time.py  test_bars_validation.py  test_bars_writer.py  test_duckdb_cross_store.py  test_pit_fundamentals.py  test_pit_macro.py  test_security_master.py  test_silver_store.py  test_tiingo_bars.py  test_tiingo_symbols.py  test_trading_calendar.py
tmp/: coverage_gap.py  price_diff_audit.py  tiingo_rawcheck.py  worst_bars.py
