# Trading OS — project metadata and PINNED dependencies.
#
# Reproducibility is a core principle: the exact package versions the connectors
# and engine were validated against are locked here, so the environment can be
# rebuilt deterministically. Versions are pinned to what is installed and
# validated, not floating ranges.
#
# Install (from repo root, venv active):
#     pip install -e .          # runtime deps
#     pip install -e ".[dev]"   # runtime + test deps

[project]
name = "trading-os"
version = "0.1.0"
description = "Point-in-time-correct, API-first market-intelligence data layer for systematic research."
requires-python = ">=3.13"

dependencies = [
    "psycopg==3.3.4",             # PostgreSQL adapter (reference + facts store)
    "exchange_calendars==4.13.2", # trading-session source of truth (calendars connector)
    "python-dotenv==1.2.2",       # .env loading in config/settings.py
    "duckdb==1.5.4",              # analytical engine + postgres attach  # CONFIRM: pip show duckdb
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]